Use new pattern to request FL9_3 in Google Tests

--- a/projects/tests/winrt/angle.test.NativeWindow.Shared.vcxitems.filters
+++ b/projects/tests/winrt/angle.test.NativeWindow.Shared.vcxitems.filters
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\tests\winrt_tests\angle.test.NativeWindow\NativeWindowTest.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\tests\winrt_tests\angle.test.NativeWindow\pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -19,6 +16,7 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\src\common\winrt\winrtutils.cpp">
       <Filter>ANGLE Code</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\tests\winrt_tests\angle.test.NativeWindow\NativeWindowTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\tests\winrt_tests\angle.test.NativeWindow\MockCoreWindow.h">
